--- a/projekt_tre0075/projekt_tre0075.vcxproj
+++ b/projekt_tre0075/projekt_tre0075.vcxproj
@@ -184,6 +184,10 @@
   <ItemGroup>
     <ClCompile Include="projekt_tre0075.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\graph1.txt" />
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
