progress, but not working because of floyd warshall. Needs to be fixed

--- a/projekt_tre0075/projekt_tre0075.vcxproj
+++ b/projekt_tre0075/projekt_tre0075.vcxproj
@@ -186,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\graph1.txt" />
+    <Text Include="graph1.txt" />
     <Text Include="test.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
