--- a/projekt_tre0075/projekt_tre0075.vcxproj.filters
+++ b/projekt_tre0075/projekt_tre0075.vcxproj.filters
@@ -20,10 +20,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="test.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
     <Text Include="..\..\graph1.txt">
       <Filter>Resource Files</Filter>
     </Text>
-    <Text Include="test.txt">
+    <Text Include="graph1.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
